--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -17,7 +17,10 @@
       </td>
     </tr>
     <tr>
-      <td><span style="border-left: 2px solid blue; padding-left: 5px">Vrpoljacka cesta 80, Sibenik, Croatia</span></td>
+      <td>
+        <span style="display:inline-block; border-left: 2px solid blue; padding-left: 5px">Vrpoljacka cesta 80, Sibenik,
+          Croatia</span>
+      </td>
     <tr>
       <td>
         <span style="border-left: 2px solid blue; padding-left: 5px">
